<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Militär Gehaltsrechner</string>
    <string name="title">Österreichisches Bundesheer</string>
    <string name="subtitle">Gehaltsrechner 2025</string>
    <string name="verwendungsgruppe">Verwendungsgruppe</string>
    <string name="gehaltsstufe">Gehaltsstufe</string>
    <string name="funktionsgruppe">Funktionsgruppe</string>
    <string name="funktionsubergruppe">Funktionsübergruppe</string>
    <string name="funktionsstufe">Funktionsstufe</string>
    <string name="berechnen">Gehalt berechnen</string>
    <string name="grundgehalt">Grundgehalt</string>
    <string name="funktionszulage">Funktionszulage</string>
    <string name="gesamtgehalt">Gesamtgehalt brutto/Monat</string>
    <string name="vergleich_hinzufuegen">Zum Vergleich hinzufügen</string>
    <string name="vergleich_zuruecksetzen">Vergleich zurücksetzen</string>
    <string name="vergleich_titel">Gehaltsvergleich</string>
    <string name="gehalt_a">Gehalt A</string>
    <string name="gehalt_b">Gehalt B</string>
    <string name="differenz">Differenz</string>
    <string name="luftfahrttechniker">Luftfahrttechniker-Nebengebühren</string>
    <string name="luftfahrttechniker_detail">Detailauswahl</string>
    <string name="waehlen">Bitte wählen...</string>
    <string name="keine">Keine</string>
    <string name="euro">€</string>

    <string-array name="verwendungsgruppen">
        <item>Bitte wählen...</item>
        <item>M1 - Berufsoffiziere</item>
        <item>M2 - Berufsunteroffiziere</item>
        <item>M3 - Chargen</item>
    </string-array>

    <string-array name="gehaltsstufen">
        <item>Bitte wählen...</item>
        <item>Stufe 1</item>
        <item>Stufe 2</item>
        <item>Stufe 3</item>
        <item>Stufe 4</item>
        <item>Stufe 5</item>
        <item>Stufe 6</item>
        <item>Stufe 7</item>
        <item>Stufe 8</item>
        <item>Stufe 9</item>
        <item>Stufe 10</item>
        <item>Stufe 11</item>
        <item>Stufe 12</item>
        <item>Stufe 13</item>
        <item>Stufe 14</item>
        <item>Stufe 15</item>
        <item>Stufe 16</item>
        <item>Stufe 17</item>
        <item>Stufe 18</item>
        <item>Stufe 19</item>
        <item>daz (kleine Dienstalterzulage)</item>
        <item>DAZ (große Dienstalterzulage)</item>
    </string-array>

    <string-array name="funktionsubergruppen">
        <item>Keine</item>
        <item>MBO 1 - Offiziere</item>
        <item>MBO 2 - Offiziere</item>
        <item>MUO 1 - Unteroffiziere</item>
    </string-array>

    <string-array name="funktionsgruppen_mbo1">
        <item>Bitte wählen...</item>
        <item>Funktionsgruppe 1</item>
        <item>Funktionsgruppe 2</item>
        <item>Funktionsgruppe 3</item>
        <item>Funktionsgruppe 4</item>
        <item>Funktionsgruppe 5</item>
        <item>Funktionsgruppe 6</item>
    </string-array>

    <string-array name="funktionsgruppen_mbo2">
        <item>Bitte wählen...</item>
        <item>Funktionsgruppe 1</item>
        <item>Funktionsgruppe 2</item>
        <item>Funktionsgruppe 3</item>
        <item>Funktionsgruppe 4</item>
        <item>Funktionsgruppe 5</item>
        <item>Funktionsgruppe 6</item>
        <item>Funktionsgruppe 7</item>
        <item>Funktionsgruppe 8</item>
        <item>Funktionsgruppe 9</item>
    </string-array>

    <string-array name="funktionsgruppen_muo1">
        <item>Bitte wählen...</item>
        <item>Funktionsgruppe 1</item>
        <item>Funktionsgruppe 2</item>
        <item>Funktionsgruppe 3</item>
        <item>Funktionsgruppe 4</item>
        <item>Funktionsgruppe 5</item>
        <item>Funktionsgruppe 6</item>
        <item>Funktionsgruppe 7</item>
    </string-array>

    <string-array name="funktionsstufen">
        <item>Bitte wählen...</item>
        <item>Stufe 1</item>
        <item>Stufe 2</item>
        <item>Stufe 3</item>
        <item>Stufe 4</item>
    </string-array>

    <string-array name="luftfahrttechniker">
        <item>Keine</item>
        <item>Assistenzdienst</item>
        <item>Wart (MLuFWart)</item>
        <item>Wart I (MLuFWart I. Kl)</item>
        <item>Luftfahrtmeister (MLuFMst)</item>
        <item>Ltd Dienst B wertig</item>
        <item>Ltd Dienst A wertig</item>
    </string-array>

    <string-array name="luft_assistenz">
        <item>Bitte wählen...</item>
        <item>ohne Beruf</item>
        <item>mit Beruf</item>
    </string-array>

    <string-array name="luft_wart">
        <item>Bitte wählen...</item>
        <item>Basis</item>
        <item>1 Typ</item>
        <item>2 Typ</item>
        <item>1 FEW</item>
        <item>2 FEW</item>
        <item>1 FEW + 1 Typ</item>
        <item>1 FEW + 2 Typ</item>
        <item>2 FEW + 1 Typ</item>
        <item>2 FEW + 2 Typ</item>
    </string-array>

    <string-array name="luft_ltd">
        <item>Bitte wählen...</item>
        <item>Standard</item>
        <item>nach einem Jahr</item>
    </string-array>
</resources>
